<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_eight">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="@dimen/scale_icon_tablet"
        android:layout_height="@dimen/scale_icon_tablet"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:src="@drawable/close"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_sixteen"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logoiconnect2"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:text="@string/message_dialog"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_top_space"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/message_dialog_2"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_top_space"
            android:gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_corner_size"
            android:background="@android:color/black"
            android:layout_marginTop="@dimen/margin_top_space"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:textSize="28sp"
            android:text="สถานะ"
            android:layout_marginTop="@dimen/margin_top_space"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_eight">

            <ImageView
                android:layout_width="@dimen/scale_icon_tablet"
                android:layout_height="@dimen/scale_icon_tablet"
                android:scaleType="fitXY"
                android:src="@drawable/ic_bluetooth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/d_bluetooth"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color_text"
                android:layout_weight="1"
                android:id="@+id/textView" />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="right|center_vertical"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_eight">

            <ImageView
                android:layout_width="@dimen/scale_icon_tablet"
                android:layout_height="@dimen/scale_icon_tablet"
                android:scaleType="fitXY"
                android:src="@drawable/ic_location"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/d_location"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color_text"
                android:layout_weight="1" />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="right|center_vertical"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_eight">

            <ImageView
                android:layout_width="@dimen/scale_icon_tablet"
                android:layout_height="@dimen/scale_icon_tablet"
                android:scaleType="fitXY"
                android:src="@drawable/ic_notification"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/d_notification"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color_text"
                android:layout_weight="1" />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="right|center_vertical"/>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>